syntax = "proto3";

package chief_of_state;

option java_package = "com.namely.protobuf.chief_of_state";
option java_multiple_files = true;
option java_outer_classname = "CosCommonProto";
option go_package = "chief_of_state";
option csharp_namespace = "Namely.ChiefOfStateService.Grpc";

import "google/protobuf/timestamp.proto";

message MetaData {
    // the revision number for the entity, increases sequentially
    // this is very useful to handle optimistic lock
    int64 revision_number = 1;
    // the time the state has been modified
    google.protobuf.Timestamp revision_date = 2;
    // use to store additional data.
    map<string, string> data = 3;
}
